HR : Fix : In a single tag attachment case, the denorm attributes were being stored incorrectly.